resolve a11y issues
don't use aria labels needlessly as they throw off screen readers
add fix for header contrast issue in dark mode

--- a/src/components/Table/Table_shim.css
+++ b/src/components/Table/Table_shim.css
@@ -6,6 +6,16 @@
   padding-right: 0px;
   margin-left: -12px;
 }
+@media (prefers-color-scheme: light) {
+  .neo-table th button {
+    color: black;
+  }
+}
+  @media (prefers-color-scheme: dark) {
+  .neo-table th button {
+    color: white;
+  }
+}
 
 .neo-table th button span {
   height: auto;
